[package]
publish = false
name = "my_planck"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atmega32u4-hal = { git = "https://github.com/Rahix/avr-hal.git" }
avr-std-stub = "1.0"

[dependencies.kbforge]
git = "https://github.com/agausmann/kbforge.git"
default-features = false
features = ["planck_rev2"]

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
