[package]
publish = false
name = "my_planck"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avr-std-stub = "1.0"

[dependencies.atmega-hal]
git = "https://github.com/Rahix/avr-hal.git"
branch = "main"
features = ["atmega32u4", "rt"]


[dependencies.polybius]
path = "../../polybius"
#git = "https://github.com/agausmann/polybius.git"
features = ["planck_rev2"]

[profile.dev]
opt-level = "s"
lto = true

[profile.release]
opt-level = "s"
lto = true